src/test/ui/mismatched_types/closure-mismatch.base.stderr
error: implementation of `Fn` is not general enough
  --> $DIR/closure-mismatch.rs:12:5
   |
LL |     baz(|_| ());
   |     ^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 ())` must implement `Fn<(&'1 (),)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 (),)>`, for some specific lifetime `'2`

error: aborting due to previous error

